data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_747.wast
;; 8. **Test Description**: Combine logical negation with a `br_if` within a loop, e.g., `br_if` when a flag is `not false`. Verify the negation is correctly handled, and branching decisions follow suit.    - **Constraint**: Ensure that logical negation correctly influences the loop's `br_if` branching decisions.    - **Incorrect Condition Evaluation**: Incorrect evaluations due to logical negation errors are tested.

(assert_invalid
  (module
    (func $test (param i32) (result i32)
      (local i32)
      (local.set 1 (i32.const 1))
      (loop (result i32)
        (br_if 0 (i32.eqz (i32.const 0)))
        (local.get 1)
      )
    )
  )
  "type mismatch"
)